<resources>
    <string name="app_name">ActiveMind</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_numbergame">Number Game</string>
    <string name="menu_login">Login</string>

    <string name="numbergame_title">Number Memory</string>
    <string name="num_holder">12345</string>
    <string name="level_holder">Level 5</string>
    <string name="text_number">Number</string>
    <string name="text_answer">Your answer</string>
    <string name="text_submit">Submit</string>
    <string name="text_next">Next</string>
    <string name="text_retry">Retry</string>
    <string name="text_start">Start</string>
    <string name="text_help">Help</string>
    <string name="text_gameOver">GAME OVER</string>

    <string name="help_sequence">Memorize the sequence of buttons that light up, then press them in order.\n\nEvery time you finish the pattern, it gets longer.\n\nEvery mistake you make, you will lose a life.\n\nWhen you run out of lives, the game ends.</string>
    <string name="help_numberGame">Each round a random number will be shown for 10 seconds.\n\nMemorise the number, then type in the number after it disappears.\n\nThe number will get longer each round.\n\nGame will end when you get the number wrong.</string>
    <string name="help_wordGame">A random word will be shown.\n\nClick \'seen\' or \'new\' depending on if the word has appeared before or not.\n\nYou will lose a life if you chose wrongly.\n\nLose 3 lives and the game will end.</string>
    <string name="login_title">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>